--- a/schliessanlagen-konfigurator/publish/web.config
+++ b/schliessanlagen-konfigurator/publish/web.config
@@ -2,10 +2,56 @@
 <configuration>
   <location path="." inheritInChildApplications="false">
     <system.webServer>
+     <httpCompression>
+    <dynamicTypes>
+        <add mimeType="text/*" enabled="true" />
+        <add mimeType="application/javascript" enabled="true" />
+        <add mimeType="application/json" enabled="true" />
+        <add mimeType="application/xml" enabled="true" />
+        <add mimeType="application/xhtml+xml" enabled="true" />
+      </dynamicTypes>
+      <staticTypes>
+        <add mimeType="text/*" enabled="true" />
+        <add mimeType="application/javascript" enabled="true" />
+        <add mimeType="application/json" enabled="true" />
+        <add mimeType="application/xml" enabled="true" />
+        <add mimeType="application/xhtml+xml" enabled="true" />
+        <add mimeType="image/svg+xml" enabled="true" />
+      </staticTypes>
+  </httpCompression>
+
+ <rewrite>
+      <rules>
+        <rule name="RemoveTrailingSlash" stopProcessing="true">
+          <match url="(.*)/$" ignoreCase="true" />
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+          </conditions>
+          <action type="Redirect" redirectType="Permanent" url="{R:1}" />
+        </rule>
+      </rules>
+    </rewrite>
+
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
       <aspNetCore processPath="dotnet" arguments=".\schliessanlagen-konfigurator.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+     
+<security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="52428800" />
+      </requestFiltering>
+    </security>
+
+ <directoryBrowse enabled="false" />
+
+     <httpErrors errorMode="Custom">
+      <remove statusCode="404" />
+      <error statusCode="404" path="/Error/NotFound" responseMode="ExecuteURL" />
+      <remove statusCode="500" />
+      <error statusCode="500" path="/Error/ServerError" responseMode="ExecuteURL" />
+    </httpErrors>
     </system.webServer>
   </location>
 </configuration>
