--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/schliessanlagen-konfigurator.csproj
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/schliessanlagen-konfigurator.csproj
@@ -39,6 +39,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="PDFsharp" Version="6.1.1" />
   </ItemGroup>
 
   <ItemGroup>
